--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script defer src="script.js"></script>
     <h1>Tic tac toe</h1>
     <div class="grid">
+      <!-- <div></div>
       <div></div>
       <div></div>
       <div></div>
@@ -18,8 +19,7 @@
       <div></div>
       <div></div>
       <div></div>
-      <div></div>
-      <div></div>
+      <div></div> -->
     </div>
   </body>
 </html>
