Add checkMark functionality

--- a/index.html
+++ b/index.html
@@ -10,16 +10,6 @@
   <body>
     <script defer src="script.js"></script>
     <h1>Tic tac toe</h1>
-    <div class="grid">
-      <!-- <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div> -->
-    </div>
+    <div class="grid"></div>
   </body>
 </html>
