--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <script defer src="script.js"></script>
     <h1>Tic tac toe</h1>
-    <div class="grid"></div>
+    <div class="grid">
+      <!-- <div class="grid-child"></div> -->
+    </div>
+    <div class="turn"></div>
   </body>
 </html>
