--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <script defer src="script.js"></script>
     <h1>Tic tac toe</h1>
     <div class="grid"></div>
+    <dialog class="modal">
+      <h2>Game over!</h2>
+      <!-- <button class="again">Again?</button> -->
+    </dialog>
     <div class="turn"></div>
+    <div class="winner"></div>
   </body>
 </html>
