Announce winner on the page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
       <!-- <button class="again">Again?</button> -->
     </dialog>
     <div class="turn"></div>
-    <div class="winner"></div>
+    <!-- <div class="winner"></div> -->
   </body>
 </html>
