Add restart functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="grid"></div>
     <dialog class="modal">
       <h2>Game over!</h2>
-      <!-- <button class="again">Again?</button> -->
+      <button class="again">Again?</button>
     </dialog>
     <div class="turn"></div>
     <!-- <div class="winner"></div> -->
