Add functionality to evluate tie

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <script defer src="script.js"></script>
     <h1>Tic tac toe</h1>
+    <button class="start">Start Game</button>
     <div class="grid"></div>
     <dialog class="modal">
       <h2>Game over!</h2>
