Update color palette

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <body>
     <script defer src="script.js"></script>
     <h1>Tic tac toe</h1>
-    <div class="turn"></div>
+    <!-- <div class="turn"></div> -->
+    <div class="turn">
+      <div class="one">Player One (X)</div>
+      <div class="two">Player Two (O)</div>
+    </div>
     <div class="grid-container">
       <div class="grid"></div>
     </div>
