--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
   </head>
   <body>
     <script defer src="script.js"></script>
-    <h1>Tic tac toe</h1>
-    <div class="print-turn"></div>
-    <div class="turn">
-      <div class="one">Player One (X)</div>
-      <div class="two">Player Two (O)</div>
-    </div>
-    <div class="grid-container">
-      <div class="grid"></div>
+    <div class="container">
+      <h1>Tic tac toe</h1>
+      <div class="print-turn"></div>
+      <div class="turn">
+        <div class="one">Player One (X)</div>
+        <div class="two">Player Two (O)</div>
+      </div>
+      <div class="grid-container">
+        <div class="grid"></div>
+      </div>
     </div>
     <dialog class="modal">
       <h2>Game over!</h2>
