Add a game start button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script defer src="script.js"></script>
     <div class="container">
       <h1>Tic tac toe</h1>
+      <button class="start">Start</button>
       <div class="print-turn"></div>
       <div class="turn">
         <div class="one">Player One (X)</div>
