--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tic tac toe</title>
+    <title>Tic-tac-toe</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <script defer src="script.js"></script>
     <div class="container">
-      <h1>Tic tac toe</h1>
+      <h1>Tic-Tac-Toe</h1>
       <button class="start">Start</button>
       <div class="print-turn"></div>
       <div class="turn">
