wip: Fix start button functionality

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container">
       <h1>Tic-Tac-Toe</h1>
       <button class="start">Start</button>
+<main class='game-disabled'>
       <div class="print-turn"></div>
       <div class="turn">
         <div class="one">Player One (X)</div>
@@ -21,6 +22,7 @@
         <div class="grid"></div>
       </div>
     </div>
+  </main>
     <dialog class="modal">
       <h2>Game over!</h2>
       <button class="again">Again?</button>
