Add .inform and animation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script defer src="script.js"></script>
     <div class="container">
       <h1>Tic-Tac-Toe</h1>
+      <div class='inform'>Click the button to start</div>
       <button class="start">Start</button>
 <main class='game-disabled'>
       <div class="print-turn"></div>
