--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <script defer src="script.js"></script>
     <div class="container">
       <h1>Tic-Tac-Toe</h1>
-      <div class='inform'>Click the button to start</div>
+      <div class="inform">Click the button to start</div>
       <button class="start">Start</button>
-<main class='game-disabled'>
       <div class="print-turn"></div>
       <div class="turn">
         <div class="one">Player One (X)</div>
@@ -23,10 +22,14 @@
         <div class="grid"></div>
       </div>
     </div>
-  </main>
+
     <dialog class="modal">
       <h2>Game over!</h2>
       <button class="again">Again?</button>
     </dialog>
+    <footer>
+      Created by
+      <a href="https://github.com/Eveieve"><img src="github.svg" alt="" /></a>
+    </footer>
   </body>
 </html>
