Ensure stat btn to fire only once

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <script defer src="script.js"></script>
     <div class="container">
       <h1>Tic-Tac-Toe</h1>
-
-      <div class="inform">Click the button to start</div>
-
-      <button class="start">Start</button>
+      <div class="top">
+        <div class="inform">Click the button to start</div>
+        <button class="start">Start</button>
+      </div>
       <div class="print-turn"></div>
       <div class="turn">
-        <div class="one">Player One (X)</div>
-        <div class="two">Player Two (O)</div>
+        <div class="one">Player 1 (X)</div>
+        <div class="two">Player 2 (O)</div>
       </div>
       <div class="grid-container">
         <div class="grid"></div>
