--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tic-tac-toe</title>
+    <title>Coffee-tac-toe</title>
+    <link rel="shortcut icon" href="coffee.svg" />
     <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="icon" href="favicon.ico" /> -->
   </head>
   <body>
     <script defer src="script.js"></script>
     <div class="container">
-      <h1>Tic-Tac-Toe</h1>
+      <h1>Coffee-Tac-Toe</h1>
       <div class="top">
         <div class="inform">Click the button to start</div>
         <button class="start">Start</button>
