--- a/index.html
+++ b/index.html
@@ -11,23 +11,43 @@
   <body>
     <script defer src="script.js"></script>
     <div class="container">
-      <h1>Tic-Tac-Toe</h1>
-      <!-- <div class="top"> -->
+      <div class="page-one">
+        <h1>Tic-Tac-Toe</h1>
+        <!-- <form action="">
+          <label for="name">Player 1</label>
+          <input
+            type="text"
+            id="player-1"
+            placeholder="Enter Name"
+            autocomplete="off"
+            required
+          /><br />
+          <label for="name">Player 2</label>
+          <input
+            type="text"
+            id="player-2"
+            placeholder="Enter Name"
+            autocomplete="off"
+            required
+          /><br />
+          <input type="submit" value="Submit" />
+        </form> -->
+      </div>
+
       <div class="inform">
         Click the button to start! <button class="start">Start</button>
       </div>
-      <!-- <button class="start">Start</button> -->
-      <!-- </div> -->
-      <div class="print-turn"></div>
-      <div class="turn">
-        <div class="one">Player 1 (X)</div>
-        <div class="two">Player 2 (O)</div>
-      </div>
-      <div class="grid-container">
-        <div class="grid"></div>
+      <div class="page-two-hidden">
+        <div class="print-turn"></div>
+        <div class="turn">
+          <div class="one">Player 1 (X)</div>
+          <div class="two">Player 2 (O)</div>
+        </div>
+        <div class="grid-container">
+          <div class="grid"></div>
+        </div>
       </div>
     </div>
-
     <dialog class="modal">
       <h2>Game over!</h2>
       <button class="again">Again?</button>
